Added Forward/Back buttons to the buglist command